<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containier"
    android:layout_width="match_parent"
    android:layout_height="56dp">

    <!--todo стили-->

    <ImageView
        android:id="@+id/policy_type_icon_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/polyce_type_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/icon_lca_insurance" />

    <TextView
        android:id="@+id/policy_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:letterSpacing="-0.01"
        android:lineSpacingExtra="0sp"
        android:textColor="#465057"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/policy_type_icon_iv"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="ДМС" />

    <TextView
        android:id="@+id/target_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:letterSpacing="-0.01"
        android:lineSpacingExtra="0sp"
        android:textColor="#c5c5c5"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/policy_type_icon_iv"
        app:layout_constraintTop_toBottomOf="@id/policy_name_tv"
        tools:text="Премиум" />

    <TextView
        android:id="@+id/info_header_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="end"
        android:lineSpacingExtra="0sp"
        android:textColor="#9ca1a4"
        android:textSize="12sp"
        app:layout_constraintRight_toLeftOf="@id/policy_detail_icon_iv"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/balance" />

    <TextView
        android:id="@+id/info_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:letterSpacing="-0.01"
        android:lineSpacingExtra="0sp"
        android:textColor="#465057"
        android:textSize="16sp"
        app:layout_constraintRight_toLeftOf="@id/policy_detail_icon_iv"
        app:layout_constraintTop_toBottomOf="@id/info_header_tv"
        tools:targetApi="lollipop"
        tools:text="48 624.24 ₽ " />

    <ImageView
        android:id="@+id/policy_detail_icon_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/policy_detail"
        android:src="@drawable/ic_chevron_right_black_24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<View
        android:id="@+id/devider_v"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginStart="@dimen/margin_start"
        android:background="@color/colorItemHealthDevider"
        app:layout_constraintBottom_toBottomOf="parent" />-->

</android.support.constraint.ConstraintLayout>